# axum-react

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md
.github/: copilot-instructions.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/controllers/: auth_controller.rs  mod.rs
backend/src/db/: mod.rs
backend/src/errors/: mod.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs  user.rs
backend/src/routes/: mod.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: README.md  architecture.md  backend-walkthrough.md  db-and-auth.md  rust-concepts.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  globals.css  main.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/stores/: auth-store.ts
frontend/src/types/: index.ts
